<resources>
    <string name="app_name">Study Assistant</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Fragments strings -->
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="select_snackbar">Please, select one item.</string>
    <string name="selected">Selected</string>

    <!-- Main Activity strings -->
    <string name="seven_days_of_the_week">7 Days of the Week</string>
    <string name="subject">Subject</string>
    <string name="field_error">field can not be empty!</string>
    <string name="time_error">Time field can not be empty!</string>
    <string name="week">Week</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="school_website">School website</string>
    <string name="school_website_snackbar">Please, set URL of your school website in settings.</string>

    <string name="add_subject">Add subject</string>
    <string name="edit_subject">Edit subject</string>
    <string name="teacher">Teacher</string>
    <string name="room">Room</string>
    <string name="time">Time</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="time_to_dialog">To:</string>
    <string name="time_from_dialog">From:</string>
    <string name="subject_dialog">Subject:</string>
    <string name="teacher_dialog">Teacher:</string>
    <string name="room_dialog">Room:</string>
    <string name="select_time">Select time</string>
    <string name="select_color">Select color</string>
    <string name="choose_time">Choose time</string>
    <string name="choose_date">Choose date</string>
    <string name="choose_color">Choose color</string>

    <!-- Homeworks Activity strings -->
    <string name="title_activity_homeworks">HomeworksActivity</string>
    <string name="homeworks">Homeworks</string>
    <string name="select_date">Select date</string>
    <string name="deadline_dialog">Deadline:</string>
    <string name="deadline">Deadline</string>
    <string name="description_dialog">Description:</string>
    <string name="desctiption">Desctiption</string>
    <string name="date_error">Date field can not be empty!</string>
    <string name="edit_homework">Edit homework</string>
    <string name="add_homework">Add homework</string>
    <string name="deadline_snackbar">"Deadline field can not be empty!</string>
    <string name="date">Date</string>

    <!-- Notes Activity strings -->
    <string name="notes">Notes</string>
    <string name="title_dialog">Title:</string>
    <string name="add_note">Add note</string>
    <string name="edit_note">Edit note</string>
    <string name="title_error">Title field can not be empty!</string>
    <string name="title">Title</string>
    <string name="saved">Saved</string>

    <!-- Teachers Activity strings -->
    <string name="teachers">Teachers</string>
    <string name="add_teacher">Add teacher</string>
    <string name="edit_teacher">Edit teacher</string>
    <string name="name_dialog">Name:</string>
    <string name="post_dialog">Post:</string>
    <string name="phonenumber_dialog">Phone:</string>
    <string name="email_dialog">Email:</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="post">Post</string>
    <string name="email">Email</string>

    <!-- Settings Activity strings -->
    <string name="sevendays_setting">Enable 7 Days of the Week</string>
    <string name="school_website_setting">Change school website</string>
    <string name="school_website_setting_summary">Change URL of your school website</string>
    <string name="start_time">Start Time</string>
    <string name="finish_time">Finish TIme</string>


    <!--Pomodoro Activity strings-->
    <string name="pomodoro">Pomodoro</string>
    <string name="work_duration">Work Duration :</string>
    <string name="short_break_duration">Short Break Duration :</string>
    <string name="long_break_duration">Long Break Duration :</string>
    <string name="work_duration_key">WORK_DURATION</string>
    <string name="short_break_duration_key">SHORT_BREAK_DURATION</string>
    <string name="long_break_duration_key">LONG_BREAK_DURATION</string>
    <string name="work_session_count_key">WORK_SESSION_COUNT</string>
    <string-array name="work_duration_array">
        <item>20 minutes</item>
        <item>25 minutes</item>
        <item>30 minutes</item>
        <item>40 minutes</item>
        <item>55 minutes</item>
    </string-array>
    <string-array name="short_break_duration_array">
        <item>3 minutes</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
    </string-array>
    <string-array name="long_break_duration_array">
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>20 minutes</item>
        <item>25 minutes</item>
    </string-array>

    <string name="current_task">Current Task</string>
    <string name="change_task">Change</string>
    <string name="task_name">Task 1</string>
    <string name="work_sessions_completed">Work sessions completed</string>
    <string name="complete_imageview_content_desc">Complete Image</string>
    <string name="settings_imageview_content_desc">Settings Image</string>
    <string name="start_pomodoro">Start Pomodoro</string>
    <string name="cancel_pomodoro">Cancel Pomodoro</string>
    <string name="start_short_break">Start Short Break</string>
    <string name="skip_short_break">Skip Short Break</string>
    <string name="start_long_break">Start Long Break</string>
    <string name="skip_long_break">Skip Long Break</string>
    <string name="skip_break">Skip Break</string>
    <string name="currently_running_service_type_key">CURRENTLY_RUNNING_SERVICE_TYPE</string>
    <string name="pomodoro_completion_alert_message">Congrats, Pomodoro is over.\n\nIt\'s time for a break.</string>
    <string name="cancel_notification_toast">Cancel</string>
</resources>
