<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">


    <group android:id="@+id/menu_mid"
        android:checkableBehavior="none">
        <item
            android:id="@+id/teachers"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/teachers" />

        <item
            android:id="@+id/homework"
            android:icon="@drawable/ic_book_black_24dp"
            android:title="@string/homeworks" />

        <item
            android:id="@+id/pomodoro"
            android:icon="@drawable/ic_access_time_black_24dp"
            android:title="@string/pomodoro" />

    </group>

    <group android:id="@+id/menu_down"
        android:checkableBehavior="none">
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/action_settings" />
    </group>

</menu>
