<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal"
        android:paddingRight="16dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:paddingRight="8dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/subject_dialog"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".7"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:layout_marginLeft="8dp"
            android:hint="@string/subject"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/teacher_dialog"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".7"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:layout_marginLeft="8dp"
            android:hint="@string/desctiption"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/room_dialog"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".7"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:singleLine="true"
            android:layout_marginLeft="8dp"
            android:hint="@string/room"
            android:textColor="@android:color/black" />

    </LinearLayout>

    <Button
        android:id="@+id/select_color"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/white"
        android:text="@string/select_color"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/from_time"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/start_time"
            android:textAllCaps="true"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/to_time"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/finish_time"
            android:textAllCaps="true"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
    </LinearLayout>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:text="@string/cancel"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cancel"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog" />

        <Button
            android:text="@string/save"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/save"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog" />

    </LinearLayout>


</LinearLayout>