<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="180dp"
            android:layout_weight="3"
            android:orientation="vertical">

            <EditText
                android:id="@+id/subjecthomework"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:paddingLeft="8dp"
                android:hint="@string/subject"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:singleLine="true" />


            <EditText
                android:id="@+id/descriptionhomework"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:paddingLeft="8dp"
                android:hint="@string/desctiption"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:singleLine="true" />

            <TextView
                android:id="@+id/datehomework"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:paddingLeft="8dp"
                android:gravity="center_vertical"
                android:text="@string/select_date"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="16sp" />


        </LinearLayout>

        <Button
            android:id="@+id/select_color"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="@string/select_color"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:layout_weight="1"
            android:width="0dp"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/save"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save" />
    </LinearLayout>
</LinearLayout>