<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.PomodoroActivity">

    <ImageView
        android:id="@+id/settings_imageview_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:padding="8dp"
        android:contentDescription="@string/settings_imageview_content_desc"
        android:src="@drawable/settings"
        android:layout_gravity="end"/>

    <TextView
        android:id="@+id/countdown_textview_main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="2"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        tools:text="25:00" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">

    <TextView
        android:id="@+id/sessions_completed_textview_main"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:paddingStart="8dp"
        android:layout_weight="2"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/work_sessions_completed"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/session_completed_value_textview_main"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:paddingEnd="8dp"
        android:gravity="center"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal|center_vertical"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@id/timer_button_main"
        app:layout_constraintRight_toRightOf="parent"
        android:textStyle="bold"
        tools:text="0" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">
    <ImageView
        android:id="@+id/finish_imageview_main"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/complete_imageview_content_desc"
        android:src="@drawable/complete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/timer_button_main"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/timer_button_main"
                android:layout_width="117dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_gravity="center"
                android:background="@color/colorPrimary"
                android:textOff="@string/start_pomodoro"
                android:textOn="@string/cancel_pomodoro" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>